[ticket/12013] Prevent the dropdown scrollbar from overlapping the content.
PHPBB3-12013

--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -603,6 +603,14 @@ ul.linklist.bulletin > li.no-bulletin:before {
 	text-align: left;
 }
 
+.dropdown-contents > li {
+	padding-right: 15px;
+}
+
+.dropdown-nonscroll > li {
+	padding-right: 0;
+}
+
 .dropdown li:first-child, .dropdown li.separator + li, .dropdown li li {
 	border-top: 0;
 }
